    * Removed ready information from get_info and event_cb functions
    * 400 responses handling change
    * 403 response handling change
    * Add sheet settings and mbl data
    * Add Transfer ID as a 64-bit int
    * Added new SET_PRINTER_READY / CANCEL_PRINTER_READY cmds
    * Inotify fix - handling nested files
    * Introduce a new conditions system

0.6.0 (2021-12-17)
    * Introduce `const.State.PREPARED`
    * remove m_time from file structure
    * telemetry method use self.state instead of argument state
    * Filesystem can mount directory to root
    * Fixed last_updated value for nested files
    * Added LOAD/UNLOAD filament constants
    * Added TransferInfo class and TransferType contants
    * Changed DOWNLOAD constants to TRANSFER
    * Download object replaced by Transfer object
    * Refactor of Transfer object, added reset method
    * Implementation of START_URL_DOWNLOAD and START_CONNECT_DOWNLOAD commands
    * Added RegistrationStatus constants
    * Added code attribute to Printer
    * Added filename length and forbidden characters check
    * Added foldername length check
    * Filename and foldername exceptions rework
    * Temporary-Code header changed to Code, added printer_type attribute

0.5.0 (2021-07-14)
    * FILE_CHANGED event sends free_space
    * Fix metadata parsing being slow (works for supported files)
    * Metadata parsing is not loading the whole gcode file into RAM anymore
    * Added additional network info
    * Implement DOWNLOAD, DOWNLOAD_INFO and DOWNLOAD_STOP command
    * checked state flag support
    * Error states iteration support
    * Added m_timestamp to file attributes
    * Command classes store both args and kwargs.
    * `max_retries` can be passed to Printer
    * Command handlers use kwargs.

0.4.0 (2021-03-30)
    * new CONNECTION_TIOMEOUT constant set to 30s
    * better Event repr
    * estimated_to_seconds do not need seconds

0.3.0 (2021-03-22)
    * fix update file structure